# cchat_client

./: .gitignore  CMakeLists.txt  copy.py  meson.build
include/client/: client.c  client.h
include/namecom/: namecom.c  namecom.h
include/sockcom/: sockcom.c  sockcom.h
src/: chat.glade  chat.glade~  main.c  main.glade
